--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.devctr</groupId>
-  <artifactId>ToDo</artifactId>
+  <artifactId>todo</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>ToDo</name>
 
@@ -58,7 +58,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>org.devctr.todo/org.devctr.todo.HelloApplication</mainClass>
+              <mainClass>org.devctr.todo/org.devctr.todo.View.HelloApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
