--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>org.devctr.todo/org.devctr.todo.View.HelloApplication</mainClass>
+              <mainClass>org.devctr.todo/org.devctr.todo.View.MainApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
